--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ https://templatemo.com/tm-582-Blitzin-seo-agency
 <body>
 
   <!-- ***** Preloader Start ***** -->
+  <!--hii -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
